--- a/StudentsManagementSystem/StudentsManagementSystem.csproj
+++ b/StudentsManagementSystem/StudentsManagementSystem.csproj
@@ -136,8 +136,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scripts\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
