--- a/StudentsManagementSystem/App.config
+++ b/StudentsManagementSystem/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<connectionStrings>
-		<add name="MyConnection" connectionString="server=192.168.43.1; user id=root; password=root; database=StudentsManagementSystem" providerName="MySql.Data.MySqlClient"/>
+		<add name="MySqlConnection" connectionString="server=192.168.43.1; user id=root; password=root; database=StudentsManagementSystem" providerName="MySql.Data.MySqlClient"/>
 	</connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
